--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <h1>
+      Welcome to CPSC 2125 Class - Spring semester
+    </h1>
     <script src="script.js"></script>
   </body>
 </html>
